--- a/tools/templates.html
+++ b/tools/templates.html
@@ -9,7 +9,7 @@
         gtag('js', new Date());
         gtag('config', 'G-G-V4JG3WWYP5');
     </script>
-
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -346,3 +346,4 @@
     </footer>
 </body>
 </html>
+
