--- a/tools/pdf-to-facturx.html
+++ b/tools/pdf-to-facturx.html
@@ -10,7 +10,7 @@
         gtag('js', new Date());
         gtag('config', 'G-G-V4JG3WWYP5');
     </script>
-
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -285,3 +285,4 @@
     </footer>
 </body>
 </html>
+
